apps/base/postgres-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
