apps/base/postgres-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-rw
  namespace: postgres
  labels:
    cnpg.io/cluster: postgres-cluster
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    cnpg.io/cluster: postgres-cluster
    cnpg.io/instanceRole: primary
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ro
  namespace: postgres
  labels:
    cnpg.io/cluster: postgres-cluster
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    cnpg.io/cluster: postgres-cluster
    cnpg.io/instanceRole: replica
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-r
  namespace: postgres
  labels:
    cnpg.io/cluster: postgres-cluster
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    cnpg.io/cluster: postgres-cluster
